--- a/templates/blog/blog_detail.html
+++ b/templates/blog/blog_detail.html
@@ -17,7 +17,7 @@
             </div>
         </div>
     </div>
-    <div class="container center-block">
+    <div class="container center-block max-width">
         <div class="row mx-auto bg-black-a text-wht">
             <!-- Post Content Column -->
             <div class="col-lg-12">
