--- a/templates/base_partials/_footer.html
+++ b/templates/base_partials/_footer.html
@@ -14,7 +14,7 @@
                 <div class="form-row align-items-center">
 
                     <div class="col-auto mx-auto">
-                        <form action="{% url 'newsletter_sub' %}" method="POST">
+                        <form action="" method="POST">
                             {% csrf_token %}
                             <div class="input-group  mb-2">
                                 {{ news_form }}
