--- a/templates/base_partials/_footer.html
+++ b/templates/base_partials/_footer.html
@@ -13,7 +13,7 @@
             <form>
                 <div class="form-row align-items-center">
 
-                    <div class="col-auto mx-auto">
+                    <!-- <div class="col-auto mx-auto">
                         <form action="" method="POST">
                             {% csrf_token %}
                             <div class="input-group  mb-2">
@@ -23,7 +23,7 @@
                                 </div>
                             </div>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
             </form>
 
