successfully added new user

--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <div class="login-pic ">
-    <div class="container about">
+    <div class="container center-block">
         <div class="overlay">
             <div class="col p-4">
                 <p class="text-grn aw display-3 text-center">{% trans "Confirm E-mail Address" %}</p>
