Change product_detail to Class based view and product model to use get_abs_url

--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -118,7 +118,7 @@
                     </tr>
                     <tr>
                         <td colspan="5" class="text-right">
-                            <a href="{% url 'products' %}" class="btn btn-outline-blakc rounded-10 btn-lg">
+                            <a href="{% url 'products:products' %}" class="btn btn-outline-blakc rounded-10 btn-lg">
                                 <span class="icon">
                                     <i class="fad fa-store"></i>
                                 </span>
@@ -141,7 +141,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <h5 class="col-12 empty aw">
-                        There are no items in your cart.&nbsp; <a href="{% url 'products' %}"> Continue
+                        There are no items in your cart.&nbsp; <a href="{% url 'products:products' %}"> Continue
                             Shopping</a>
                     </h5>
                 </div>
