--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -9,7 +9,7 @@
         <div class="container ">
             <div class="row">
                 <div class="col-md-12 mb-0">
-                    <a class="text-wht aw pl-2" href="{% url 'products:products' %}">Shop</a>
+                    <a class="text-wht aw pl-2" href="{% url 'products' %}">Shop</a>
                     <span class="mx-2 mb-0 text-wht">/</span>
                     <small class="text-wht aw">Product</small>
                 </div>
@@ -46,7 +46,7 @@
                     <div class="row justify-content-around">
                         {% if product.category %}
                         <span class="mt-1 mb-0">
-                            <a class="" href="{% url 'products:products' %}?category={{ product.category.name }}">
+                            <a class="" href="{% url 'products' %}?category={{ product.category.name }}">
                                 <i class="fad fa-tags"></i>&nbsp;{{ product.category.friendly_name }}
                             </a>
                         </span>
@@ -112,7 +112,7 @@
                                     </button>
                                 </div>
                                 <div class="mx-1">
-                                    <a href="{% url 'products:products' %}"
+                                    <a href="{% url 'products' %}"
                                         class="hover-shadow aw px-2 py-4 btn btn-outline-black rounded-10 mt-5 bg-warning border-bk ">
                                         <i class="pr-3 fad fa-store"></i>Keep Shopping
                                     </a>
