--- a/templates/base_partials/_navbar.html
+++ b/templates/base_partials/_navbar.html
@@ -32,7 +32,7 @@
             {% else %}
             {% endif %}
             <li class="nav-item ">
-                <a class="nav-link" href="{% url 'products:products' %}">Shop</a>
+                <a class="nav-link" href="{% url 'products' %}">Shop</a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link" href="{% url 'blog:list' %}">Blogs</a>
