--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -131,6 +131,6 @@
     {% endblock content %}
     {% block postloadjs %}
     {{ block.super }}
-    {% include "templates\products\includes\quantity_input_script.html" %}
+    {% include "products/includes/quantity_input_script.html" %}
 
     {% endblock postloadjs %}
