added quantity_input to js folder and added scripts to page

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -129,6 +129,8 @@
     {% endblock content %}
     {% block postloadjs %}
     {{ block.super }}
-    {% include 'products/includes/quantity_input_script.html' %}
+    <script rel="stylesheet" src="{% static 'js/quantity_input_script.js' %}"></script>
+
+
 
     {% endblock postloadjs %}
