--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 {% load bag_tools %}
 {% block content %}
 
@@ -134,7 +135,7 @@
 
 {% block postloadjs %}
 {{ block.super }}
-{% include "products\includes\quantity_input_script.html" %}
+<script src="{% static 'js/quantity_input_script.js' %}"></script>
 
 <script type="text/javascript">
     // Update quantity on click
@@ -162,99 +163,3 @@
 </script>
 
 {% endblock postloadjs %}
-
-
-
-<!--
-<div class="container-fluid">
-    <div class="row align-items-center">
-        <div class="col-12 text-center bg-black">
-            <h3 classbk aw">
-                Cart
-            </h3>
-        </div>
-    </div>
-    <div class="container-fluid  bg-black-a shop-container">
-
-        <div class="row justify-content-around text-center  bg-black-a rounded-10 text-wht">
-            <div class="col-md-2 col-12 align-self-center my-2">
-                <img src="" class="rounded-10" style="width: 8rem;" alt="">
-            </div>
-            <div class="col-md-3  col-12 align-items-center">
-                <h4 class="text-center"></h4>
-                <small>Size: </small>
-                <p class="text-center">This is some text about the product</p>
-            </div>
-            <div class="col-md-2 col-12 align-self-center mb-2">
-                <div class="mx-auto input-group" style="max-width: 120px;">
-                    <div class="input-group-prepend">
-                        <a id="minus" href="" class=" btn btn-outline-light">
-                            <strong>&minus;</strong>
-                        </a>
-                    </div>
-                    <input type="text" class="aw form-control text-center" value="">
-                    <div class="input-group-append">
-                        <a id="plus" href="" class=" btn btn-outline-light">
-                            <strong>&plus;</strong>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-2 col-12 align-self-center">
-                <h5 class="aw">$</h5>
-            </div>
-            <div class="col-md-1 col-12 align-self-center">
-                <a id="trash" href="" class="text-wht btn btn-outline-light btn-md"><i class="fad fa-trash-alt"></i></a>
-            </div>
-
-        </div>
-
-        <hr>
-
-        <div class="container">
-            <div class="row align-items-center">
-                <h5 class="col-12 empty">
-                    There are no items in your cart. <a href="">Continue
-                        Shopping</a>
-                </h5>
-            </div>
-        </div>
-
-
-      
-    
-
-  Totals Section
-    <div class="row  justify-content-end ">
-        <div class="col-md-7 col-6"></div>
-        <div class=" text-wht col-md-4 col-12 rounded-10 bg-black-a mr-3">
-
-
-
-            <div class="row mt-3 ">
-                <div class="aw d-flex justify-content-start col-6">
-                    <h5>SubTotal</h5>
-                </div>
-                <div class="aw d-flex justify-content-end col-6">
-                    <h5>$</h5>
-                </div>
-                <div class="aw d-flex justify-content-start col-6">
-                    <h5>Total</h5>
-                </div>
-                <div class="aw d-flex justify-content-end col-6">
-                    <h5>$</h5>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row justify-content-end aw mt-1 ">
-        <div class="col-md-6 col-12">
-            <a href="" class="btn btn-primary w-100 rounded-10">Keep Shopping</a>
-        </div>
-        <div class="col-md-6 col-12">
-            <a href="" class="btn btn-success w-100 rounded-10">CheckOut</a>
-        </div>
-    </div>
-
-    <div class="spaces-2"></div>
-</div> -->
