--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -9,28 +9,18 @@
 
 {% block content %}
 
-
-<div class="container-fluid bg-black">
-    <div class="row">
-        <div class="col-md-12 mb-0">
-
-            {% if from_profile %}
-            <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
-            <span class="mx-2 mb-0 text-wht">/</span>
-            <a class="text-wht aw pl-2" href="{% url 'profile' %}">Dashboard</a>
-            {% else %}
-            <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
-            {% endif %}
-
-
-
-        </div>
-    </div>
-</div>
-
 <!-- <div class="container-cart"> -->
 <!-- <div class="container product-overlay"> -->
 <div class="container mb-2">
+    <div class="container ">
+        <div class="row">
+            <div class="col-md-12 mb-0">
+                <a class="text-wht aw pl-2" href="{% url 'profile' %}">Dashboard</a>
+                <span class="mx-2 mb-0 text-wht">/</span>
+                <small class="text-wht aw">Invoice</small>
+            </div>
+        </div>
+    </div>
     <div class="row p">
         <div class="col">
             <hr>
@@ -79,7 +69,7 @@
                         <p class="mb-0 text-black aw">Date Ordered</p>
                     </div>
                     <div class="col-12 col-md-8 text-right">
-                        <p class="mb-0">{{ order.date|date:"D d M Y" }} }}</p>
+                        <p class="mb-0">{{ order.date|date:"D d M Y" }}</p>
                     </div>
                 </div>
 
