--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -138,7 +138,7 @@
         {% for items in sale_items %}
         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
             <div class="card w-100 h-100 border-1">
-                <a class="back-up-img mx-auto" href="{% url 'product_detail' product.id %}">
+                <a class="back-up-img mx-auto" href="{% url 'product_detail' items.id %}">
                     <img class="mx-auto card-img-top shop-card-top-img img-fluid" src="{{ items.image.url }}"
                         alt="{{ items.name }}">
                 </a>
