--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -170,7 +170,7 @@
         <div class="container">
             <h2 class="aw active-size text-center text-wht mt-5 pt-4 pb-4">Feature Blogs</h2>
             <div class="row center-block">
-                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div id="index_carousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner text-wht">
                         {% for blog in feature_blog %}
                         <div class="carousel-item {% if forloop.counter == 1 %}active{% endif %}"
@@ -198,11 +198,11 @@
 
                         {% endfor %}
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#index_carousel" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#index_carousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
