--- a/templates/blog/blog_list.html
+++ b/templates/blog/blog_list.html
@@ -26,7 +26,7 @@
             <div class="ovalpha-overlay">
                 <h1 class="my-4 aw text-red text-center">Featured Blogs</h1>
             </div>
-            <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
+            <div id="feature_carousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner text-wht">
                     {% for blog in all_blogs %}
                     {% if blog.featured == True %}
@@ -50,11 +50,11 @@
                     {% endif %}
                     {% endfor %}
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#feature_carousel" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="#carouselExampleControls2" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#feature_carousel" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
