--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -6,14 +6,13 @@
     <div class="container ">
         <div class="row">
             <div class="col-md-12 mb-0">
-                <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
+                <a class="text-wht aw pl-2" href="{% url 'blog:list' %}">Blogs</a>
                 <span class="mx-2 mb-0 text-wht">/</span>
                 {% if user.is_authenticated %}
                 <a class="text-wht aw pl-2" href="{% url 'blog:create' %}">Create</a>
                 <span class="mx-2 mb-0 text-wht">/</span>
                 {% endif %}
-
-                <small class="text-wht aw">Blogs</small>
+                <small class="text-wht aw">Blog Details</small>
             </div>
         </div>
     </div>
@@ -80,7 +79,7 @@
                     </div>
                 </div>
                 {% else %}
-                <a href="{% url 'account_login' %}" class=" mb-4 btn btn-warning">Login to Comment</a>
+                <a href="{% url 'account_login' %}" class="aw mb-4 btn btn-warning">Login to Comment</a>
                 {% endif %}
                 <!-- Single Comment -->
                 {% for blogcomment in blog.blogcomments %}
