--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 
 {% block content %}
@@ -15,7 +16,6 @@
                 <a class="text-wht aw pl-2" href="{% url 'blog:create' %}">Create</a>
                 <span class="mx-2 mb-0 text-wht">/</span>
                 {% endif %}
-
                 <small class="text-wht aw">Blogs</small>
             </div>
         </div>
@@ -28,10 +28,10 @@
             </div>
             <div id="feature_carousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner text-wht">
-                    {% for blog in all_blogs %}
-                    {% if blog.featured == True %}
+                    {% for blog in feature_blog %}
                     <div class="carousel-item {% if forloop.counter == 1 %}active{% endif %}"
                         id="slide{{ forloop.counter }} ">
+
                         <a href="{{ blog.get_absolute_url }}">
                             <img class="d-block carosel-img mx-auto" src="{{ blog.thumbnail.url }}" alt="First slide">
                             <div class="row justify-content-center">
@@ -47,7 +47,6 @@
                                     {{ blog.get_comment_count }}</span></div>
                         </div>
                     </div>
-                    {% endif %}
                     {% endfor %}
                 </div>
                 <a class="carousel-control-prev" href="#feature_carousel" role="button" data-slide="prev">
@@ -59,7 +58,7 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-            <div class="ovalpha-overlay bg-black-a rounded-10">
+            <div class="ovalpha-overlay rounded-10">
                 <h2 class="my-4 aw text-primary text-center">All Blogs</h2>
             </div>
 
