--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -80,7 +80,7 @@
                     members experances or blog about your own.
                 </p>
             </div>
-            <img src="{% static 'images/bruce-mars-(friends)800.jpg' %}" class="card-img-top" alt="..." />
+            <img src="{% static 'images/sven-mieke.jpg' %}" class="card-img-top" alt="..." />
         </div>
         <div class="card">
             <img src="{% static 'images/pool-man.jpg' %}" class="card-img-top" alt="..." />
