--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -135,32 +135,8 @@
 
 {% block postloadjs %}
 {{ block.super }}
-<script rel="stylesheet" src="{% static 'js/quantity_input_script.js' %}"></script>
-
-<script type="text/javascript">
-    // Update quantity on click
-    $('.update-link').click(function (e) {
-        var form = $(this).prev('.update-form');
-        form.submit();
-    })
-
-    // Remove item and reload on click
-    $('.remove-item').click(function (e) {
-        var csrfToken = "{{ csrf_token }}";
-        var itemId = $(this).attr('id').split('remove_')[1];
-        var size = $(this).data('product_size');
-        var url = `/cart/remove/${itemId}/`;
-        var data = {
-            'csrfmiddlewaretoken': csrfToken,
-            'product_size': size
-        };
-
-        $.post(url, data)
-            .done(function () {
-                location.reload();
-            });
-    })
-</script>
+<script src="{% static 'js/quantity_input_script.js' %}"></script>
+<script src="{% static 'js/upDateBtn.js' %}"></script>
 
 {% endblock postloadjs %}
 
