--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -35,24 +35,29 @@
             <div class=" col-12 col-md-6 col-lg-4 bg-white rounded-right">
                 <div class="product-details-container mb-5 mt-md-5">
                     <h5 class="aw text-center mb-2">{{ product.name }}</h5>
-                    <hr>
-                    <p class="aw lead mb-0 text-center font-weight-bold">${{ product.price }}</p>
-
                     <div class="row justify-content-around">
                         {% if product.category %}
-                        <span class="mt-1 mb-0">
-                            <a class="" href="{% url 'products' %}?category={{ product.category.name }}">
-                                <i class="fad fa-tags"></i>&nbsp;{{ product.category.friendly_name }}
-                            </a>
-                        </span>
-                        {% endif %}
+                        <a class="mx-2" href="{% url 'products' %}?category={{ product.category.name }}">
+                            <i class="fad fa-tags"></i>&nbsp;{{ product.category.friendly_name }}
+                        </a>
 
-                        {% if product.rating %}
-                        <span class="text-bk float-right"><i class="fad fa-star fa-lg mr-1"></i>{{ product.rating }} /
-                            5</span>
-                        {% else %}
-                        <small class="">No Rating</small>
                         {% endif %}
+                        {% if product.rating %}
+                        <span class="text-bk text-center"><i class="fad fa-star fa-lg mr-1"></i>{{ product.rating }}
+                            /
+                            5
+                            {% else %}
+                            <small class="col-12">No Rating</small>
+                            {% endif %}
+                    </div>
+                    <hr>
+                    <p class="aw lead mb-0 text-center font-weight-bold"><i
+                            class="far fa-dollar-sign"></i>&nbsp;{{ product.price }}</p>
+
+                    <div class="row justify-content-around">
+
+
+
                     </div>
 
                     <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
@@ -61,7 +66,7 @@
                             {% with product.has_sizes as s %}
                             {% if s %}
                             <div class="d-flex justify-content-center col-12 mt-3">
-                                <p class="aw mr-2 ">Size:</p>
+                                <p class="aw mr-2 mt-1">Size:</p>
                                 <select class="form-control custom-pl rounded-10 w-50" name="product_size"
                                     id='id_product_size'>
                                     <option class="aw" value="xs">XS</option>
