--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,6 +36,7 @@ img {
   padding-left: 4rem;
 }
 
+
 .hover-shadow:hover {
   -webkit-box-shadow: 0px 10px 19px -5px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 10px 19px -5px rgba(0, 0, 0, 0.75);
@@ -524,6 +525,10 @@ nav {
   flex-flow: initial;
   -ms-flex-align: center;
   align-items: center;
+}
+
+.vert-aline {
+  vertical-align: super;
 }
 
 .product-overlay {
