--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -51,8 +51,9 @@
                             {% endif %}
                     </div>
                     <hr>
-                    <p class="aw lead mb-0 text-center font-weight-bold"><i
-                            class="far fa-dollar-sign"></i>&nbsp;{{ product.price }}</p>
+                    <p class="aw lead mb-0 text-center font-weight-bold"><span
+                            class="mont_b">$</span>{{ product.price }}
+                    </p>
 
                     <div class="row justify-content-around">
 
